--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@testing-library/react": "^16.0.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
